--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -604,6 +604,8 @@ $aspect-ratios: (
 // scss-docs-start font-variables
 // stylelint-disable value-keyword-case
 $font-family-sans-serif:
+  "Lato",
+  // Custom font
   system-ui,
   -apple-system,
   "Segoe UI",
