adds custom css styling for profile image

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,10 @@
+// Custom css
+
+.profile-image {
+  width: 190px;
+  height: 190px;
+}
+
 // scss-docs-start import-stack
 // Configuration
 @import "../../node_modules/bootstrap/scss/functions";
