--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1278,11 +1278,8 @@ $navbar-toggler-border-radius: $btn-border-radius !default;
 $navbar-toggler-focus-width: $btn-focus-width !default;
 $navbar-toggler-transition: box-shadow 0.15s ease-in-out !default;
 
-$navbar-light-color: rgba(var(--#{$prefix}emphasis-color-rgb), 0.65) !default;
-$navbar-light-hover-color: rgba(
-  var(--#{$prefix}emphasis-color-rgb),
-  0.8
-) !default;
+$navbar-light-color: $space-cadet; // Custom
+$navbar-light-hover-color: $primary; //Custom
 $navbar-light-active-color: rgba(
   var(--#{$prefix}emphasis-color-rgb),
   1
