--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,10 +12,19 @@
   }
 }
 
-//Profile image
+//Profile
 .profile-image {
   width: 190px;
   height: 190px;
+}
+
+#user-listings,
+#user-bid-history {
+  max-height: 283px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 //Listing cards
