--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,8 +1,20 @@
-// Custom css
-
+/* Custom css*/
 //Global styles
-.card {
-  @extend .shadow;
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+main {
+  flex-grow: 1;
 }
 
 .navbar-toggler {
@@ -10,6 +22,10 @@
     height: 20px;
     width: 20px;
   }
+}
+
+.card {
+  @extend .shadow;
 }
 
 //Profile
