--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -32,8 +32,11 @@ main {
 .profile-image {
   width: 190px;
   height: 190px;
+  display: block;
+  margin: 0 auto;
 }
 
+#bid-history,
 #user-listings,
 #user-bid-history {
   max-height: 283px;
