--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,6 +15,11 @@ body {
 
 main {
   flex-grow: 1;
+  padding-top: 60px;
+}
+
+footer {
+  padding-top: 60px;
 }
 
 .navbar-toggler {
@@ -28,7 +33,7 @@ main {
   @extend .shadow;
 }
 
-//Profile
+// Styling of profile containers and profile-image
 .profile-image {
   width: 190px;
   height: 190px;
@@ -46,10 +51,9 @@ main {
   padding-left: 15px;
 }
 
-//Listing cards
+//Styling of listing cards rendered on the homepage
 .listing-card {
   height: 400px;
-
   display: flex;
   flex-direction: column;
 
@@ -65,6 +69,22 @@ main {
     flex-direction: column;
     justify-content: center;
   }
+}
+
+// Styling of Single listing containers and image
+
+.media-container,
+.info-container {
+  height: 400px;
+  overflow: hidden;
+}
+
+.media-container img {
+  object-fit: cover;
+  width: 100%;
+  height: 400px;
+  display: block;
+  border-radius: 4px;
 }
 
 // scss-docs-start import-stack
