updates code to handle hero-section on homepage if userloggedin or not

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -33,6 +33,12 @@ footer {
   @extend .shadow;
 }
 
+// Styling home page hero section
+
+#hero-section {
+  padding-bottom: 60px;
+}
+
 // Styling of profile containers and profile-image
 .profile-image {
   width: 190px;
