--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,5 @@
 /* Custom css*/
 //Global styles
-
 html,
 body {
   height: 100%;
@@ -33,13 +32,12 @@ footer {
   @extend .shadow;
 }
 
-// Styling home page hero section
-
+// Hero Section
 #hero-section {
   padding-bottom: 60px;
 }
 
-// Styling of profile containers and profile-image
+// Profile containers
 .profile-image {
   width: 190px;
   height: 190px;
@@ -57,7 +55,7 @@ footer {
   padding-left: 15px;
 }
 
-//Styling of listing cards rendered on the homepage
+// Listings card
 .listing-card {
   height: 400px;
   display: flex;
@@ -77,8 +75,7 @@ footer {
   }
 }
 
-// Styling of Single listing containers and image
-
+// Single listing containers
 .media-container,
 .info-container {
   height: 400px;
